tests/should_fail/register.c
int main(void) {
	register int a = 10;
	int *addr = &a;
	(void)addr;
}
